--- a/config.json
+++ b/config.json
@@ -23,9 +23,16 @@
   },
   "exercises": {
     "concept": [],
-    "practice": []
+    "practice": [{
+      "slug": "hello-world",
+      "name": "Hello World",
+      "uuid": "0a92ba3b-4833-4482-9631-b2f874ce6224",
+      "practices": [],
+      "prerequisites": [],
+      "difficulty": 1
+    }]
   },
   "concepts": [],
   "key_features": [],
-  "tags": []
+  "tags": ["paradigm/imperative","execution_mode/compiled"]
 }
