--- a/config.json
+++ b/config.json
@@ -13,7 +13,7 @@
   "online_editor": {
     "indent_style": "space",
     "indent_size": 4,
-    "highlightjs_language": "TODO: specify highlightjs language"
+    "highlightjs_language": "cobol"
   },
   "files": {
     "solution": [],
